I added a sentence for the header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Sweets & Chocolates</title>
 </head>
 <body>
-    <header></header>
+    <header>Welcome to our wonderful selection of Sweets and Chocolates!</header>
 </body>
 </html>
