--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Sweets & Chocolates</title>
 </head>
 <body>
-    <header>Welcome to our wonderful selection of Sweets and Chocolates!</header>
+    <header><h1>Welcome to our wonderful selection of Sweets and Chocolates!</h1></header>
 </body>
 </html>
