--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweets & Chocolates</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header><h1>Welcome to our wonderful selection of Sweets and Chocolates!</h1></header>
