I added an image for my website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <header><h1>Welcome to our wonderful selection of Sweets and Chocolates!</h1></header>
+
+    <main> 
+        <img src="chocolate.jpg" alt="Chocolate with powder, cinematic">
+    </main>
 </body>
 </html>
