--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>Welcome to our wonderful selection of Sweets and Chocolates!</h1></header>
+    <header>
+        <h2>Welcome to our wonderful selection of Sweets and Chocolates!</h2>
+    </header>
 
     <main> 
-        <img src="chocolate.jpg" alt="Chocolate with powder, cinematic">
+
     </main>
 </body>
 </html>
