--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        
+    </nav>
     <header>
         <h2>Welcome to our wonderful selection of Sweets and Chocolates!</h2>
     </header>
