--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        
+    
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About Us</a></li>
+            <li><a href="index.html">Products</a></li>
+        </ul>
     </nav>
+
     <header>
         <h2>Welcome to our wonderful selection of Sweets and Chocolates!</h2>
     </header>
 
     <main> 
-
+        <img src="chocolate.jpg" alt="Image of chocolate surrounded with powder and nuts">
     </main>
 </body>
 </html>
