I added paragraph tags

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <main> 
         <img src="chocolate.jpg" alt="Image of chocolate surrounded with powder and nuts">
-        Savour the taste of sweets and chocolates from around the world with our wonderful range of European sweets and chocolates.
+        <p>Savour the taste of sweets and chocolates from around the world with our wonderful range of European sweets and chocolates.</p>
 
-We have travelled the world to locate the fantastic range that we offer you, and have included the best choice from the countries we visited.These are imported and packaged in our Auckland facility.
+<p>We have travelled the world to locate the fantastic range that we offer you, and have included the best choice from the countries we visited.These are imported and packaged in our Auckland facility.</p>
     </main>
 </body>
 </html>
