I changed the background color of the main webpage and added in the image and header for welcoming customers

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <h2>Welcome to our wonderful selection of Sweets and Chocolates!</h2>
+        <img src="chocolate.jpg" alt="A picture of chocolate with nuts and powder">
+    </main>
 </body>
 </html>
