I pasted the style of for the navigation bar onto the products so that we can get a constant navigation bar throughout each page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <h2>Welcome to our wonderful selection of Sweets and Chocolates!</h2>
-        <img src="chocolate.jpg" alt="A picture of chocolate with nuts and powder">
+        <img src="chocolate.jpg" alt="A picture of chocolate with nuts and powder" class="center">
     </main>
 </body>
 </html>
