I added in the page content needed for my products page for eg/ the paragraphs and images needed for that page

--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
     <h3>The following are some of our wonderful products!</h3>
 
     <div class="product">
-        <img src="baci.jpg" alt="Baci Perugina">
+        <img src="Baci.jpg" alt="Baci Perugina">
         <div class="product-description">
             <p>Baci Perugina - Delicious hazelnut chocolates, the soft inner with hazelnut grains and cocoa reaches the apex of crunchiness with the whole hazelnut and is coated by the double cover of fine dark chocolate Luisa. Every time is a unique and unrepeatable experience.</p>
         </div>
