I added in this symbol "<" to close the tags so that it would work for my website

--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
 
 
 <main>
-    div class="product-section">
+    <div class="product-section">
     <h2>Products</h2>
     <h3>The following are some of our wonderful products!</h3>
 
