--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
         <main>
             <h2>Welcome to our wonderful selection of Sweets and Chocolates!</h2>
             <div class="content">
-                <img src="chocolate.jpg" alt="Chocolates Image">
+                <img src="chocolate.jpg" alt="Chocolate surrounded with powder and nuts">
                 <div class="text">
                     <p>Savour the taste of sweets and chocolates from around the world with our wonderful range of European sweets and chocolates.</p>
                     <p>We have travelled the world to locate the fantastic range that we offer you, and have included the best choice from the countries we visited. These are imported and packaged in our Auckland facility.</p>
                 </div>
             </div>
-       
         </main>
-    
-    </main>
 </body>
 </html>
