--- a/products.html
+++ b/products.html
@@ -26,21 +26,21 @@
     <h2>Products</h2>
     <h3>The following are some of our wonderful products!</h3>
 
-    <div class="product">
+    <div class="product-1">
         <img src="Baci.jpg" alt="Baci Perugina">
         <div class="product-description">
             <p>Baci Perugina - Delicious hazelnut chocolates, the soft inner with hazelnut grains and cocoa reaches the apex of crunchiness with the whole hazelnut and is coated by the double cover of fine dark chocolate Luisa. Every time is a unique and unrepeatable experience.</p>
         </div>
     </div>
 
-    <div class="product">
+    <div class="product-2">
         <img src="ferrero.jpg" alt="Ferrero Rocher">
         <div class="product-description">
             <p>Ferrero Rocher - Light chocolate with a crust of golden crunch around a nut center. Open the golden wrapper and discover a delicious combination of textures and flavors.</p>
         </div>
     </div>
 
-    <div class="product">
+    <div class="product-3">
         <img src="vosges.jpg" alt="Vosges Haut-Chocolat">
         <div class="product-description">
             <p>Vosges-Haut-Chocolat - The ultimate gift - decadent chocolate, beautifully presented. Vosges Haut-Chocolat is a Chicago-based luxury chocolate maker, founded in 1998, that offers varieties flavored with spices, bacon, and other ingredients.</p>
