I added in my footer and put it in a div class so that I could separate it from the other h1

--- a/index.html
+++ b/index.html
@@ -30,5 +30,19 @@
                 </div>
             </div>
         </main>
+
+        <footer> <div>
+            <h1>Contact Us</h1>
+            <p>If you would like to know more about our fantastic products contact us at: 
+                sales@chocolates.com
+                Our other details are:
+                Chocolates & Sweets Ltd
+                PO Box 45-904Chatswood, New Zealand.
+                Phone: 09 489-3980
+                Fax: 09 489-3990
+                </p>
+        </div>
+            
+        </footer>
 </body>
 </html>
