I changed the background color and placed a "<br>" tag to separate the other line

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             </div>
         </main>
 
-        <footer> <div>
-            <h1>Contact Us</h1>
-            <p>If you would like to know more about our fantastic products contact us at: 
+        <footer>
+            <div class="contact">
+                <h1>Contact Us</h1>
+                <p>
+                If you would like to know more about our fantastic products contact us at: <br>
                 sales@chocolates.com
                 Our other details are:
                 Chocolates & Sweets Ltd
@@ -41,8 +43,7 @@
                 Phone: 09 489-3980
                 Fax: 09 489-3990
                 </p>
-        </div>
-            
+            </div>
         </footer>
 </body>
 </html>
