I added a break tag (<br>) for each sentence

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <h1>Contact Us</h1>
                 <p>
                 If you would like to know more about our fantastic products contact us at: <br>
-                sales@chocolates.com
-                Our other details are:
-                Chocolates & Sweets Ltd
-                PO Box 45-904Chatswood, New Zealand.
-                Phone: 09 489-3980
+                sales@chocolates.com <br>
+                Our other details are: <br>
+                Chocolates & Sweets Ltd <br>
+                PO Box 45-904Chatswood, New Zealand. <br>
+                Phone: 09 489-3980 <br>
                 Fax: 09 489-3990
                 </p>
             </div>
