On the index page, I added this symbol ":" and on the css, I was changing the font weight, fonts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <footer>
             <div class="contact">
-                <h1>Contact Us</h1>
+                <h1>Contact Us:</h1>
                 <p>
                 If you would like to know more about our fantastic products contact us at: <br>
                 sales@chocolates.com <br>
