Contact page information

--- a/products.html
+++ b/products.html
@@ -49,5 +49,20 @@
 </div>
 </main>
 
+
+<footer>
+    <div class="contact">
+        <h1>Contact Us:</h1>
+        <p>
+        If you would like to know more about our fantastic products contact us at: <br>
+        sales@chocolates.com <br>
+        Our other details are: <br>
+        Chocolates & Sweets Ltd <br>
+        PO Box 45-904Chatswood, New Zealand. <br>
+        Phone: 09 489-3980 <br>
+        Fax: 09 489-3990
+        </p>
+    </div>
+</footer>
 </body>
 </html>
