I changed the image

--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="product">
-        <img src="ferrero.jpg" alt="Ferrero Rocher">
+        <img src="ferrerocher.jpg" alt="Ferrero Rocher">
         <div class="product-description">
             <p>Ferrero Rocher - Light chocolate with a crust of golden crunch around a nut center. Open the golden wrapper and discover a delicious combination of textures and flavors.</p>
         </div>
