I changed the image and I added a different image of chocolate

--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="product">
-        <img src="vosges.jpg" alt="Vosges Haut-Chocolat">
+        <img src="vosgeschoc.jpg" alt="Vosges Haut-Chocolat">
         <div class="product-description">
             <p>Vosges-Haut-Chocolat - The ultimate gift - decadent chocolate, beautifully presented. Vosges Haut-Chocolat is a Chicago-based luxury chocolate maker, founded in 1998, that offers varieties flavored with spices, bacon, and other ingredients.</p>
         </div>
