I deleted some things because I could not change them

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="contact">
                 <h1>Contact Us:</h1>
                 <p>
-                If you would like to know more about our fantastic products contact us at: <div class="info">sales@chocolates.com</div> <br>
+                If you would like to know more about our fantastic products contact us at: sales@chocolates.com <br>
                 Our other details are: <br>
                 Chocolates & Sweets Ltd <br>
                 PO Box 45-904Chatswood, New Zealand. <br>
