I linked in the image for the about page

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
                 <p>Helen<br>Managing Director</p>
             </div>
         </div>
+        <img src="ferrero_baci.jpg" alt="Ferrero and Milk Baci flower gift">
     </main>
 
     <footer>
