--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <p>Helen<br>Managing Director</p>
             </div>
         </div>
-        <img src="ferrero_baci.jpg" alt="Ferrero and Milk Baci flower gift">
+        <img src="ferrero_baci.jpg" alt="Ferrero and Milk Baci flower gift" class="center">
     </main>
 
     <footer>
